--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <ul class="nav__list">
             <li class="nav__item">
 
-                <a href="index.html" class="nav__link">Home</a>
+                <a href="index.html" class="nav__link nav__link--active">Home</a>
                 <a href="about.html" class="nav__link">About Me</a>
-                <a href="projects.html" class="nav__link">My Projects</a>
+                <a href="projects.html" class="nav__link" >My Projects</a>
                 <a href="contact.html" class="nav__link">Contact</a>
             </li>
 
